.metadata/.plugins/org.eclipse.cdt.ui/03-STM32F4xx_PID_TM.build.log
16:54:20 **** Incremental Build of configuration Debug for project 03-STM32F4xx_PID_TM ****
make all 
Building file: ../src/main.c
Invoking: MCU GCC Compiler
/media/data/CODES/sw4stm32_workbench/03-STM32F4xx_PID_TM/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32F429ZITx -D __FPU_PRESENT -DARM_MATH_CM4 -DSTM32F429I_DISC1 -DSTM32F4 -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F429_439xx -DUSE_STM324x9I_EVAL -I"/media/data/CODES/sw4stm32_workbench/03-STM32F4xx_PID_TM/inc" -I"/media/data/CODES/sw4stm32_workbench/03-STM32F4xx_PID_TM/CMSIS/device" -I"/media/data/CODES/sw4stm32_workbench/03-STM32F4xx_PID_TM/CMSIS/core" -I"/media/data/CODES/sw4stm32_workbench/03-STM32F4xx_PID_TM/StdPeriph_Driver/inc" -I/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:59:2: error: unknown type name 'TM_OneWire_t'
  TM_OneWire_t OneWire;
  ^
../src/main.c:92:2: error: too many arguments to function 'TM_OneWire_Init'
  TM_OneWire_Init(&OneWire, GPIOA, GPIO_PIN_6);
  ^
In file included from ../src/main.c:22:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_onewire.h:86:13: note: declared here
src/subdir.mk:30: recipe for target 'src/main.o' failed
 extern void TM_OneWire_Init(void);
             ^
../src/main.c:96:12: error: too many arguments to function 'TM_OneWire_First'
  devices = TM_OneWire_First(&OneWire);
            ^
In file included from ../src/main.c:22:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_onewire.h:149:16: note: declared here
 extern uint8_t TM_OneWire_First(void);
                ^
../src/main.c:99:25: warning: passing argument 1 of 'TM_OneWire_GetFullROM' from incompatible pointer type [-Wincompatible-pointer-types]
   TM_OneWire_GetFullROM(&OneWire, device[count]);
                         ^
In file included from ../src/main.c:22:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_onewire.h:175:13: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'int *'
 extern void TM_OneWire_GetFullROM(uint8_t *firstIndex);
             ^
../src/main.c:99:3: error: too many arguments to function 'TM_OneWire_GetFullROM'
   TM_OneWire_GetFullROM(&OneWire, device[count]);
   ^
In file included from ../src/main.c:22:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_onewire.h:175:13: note: declared here
 extern void TM_OneWire_GetFullROM(uint8_t *firstIndex);
             ^
../src/main.c:103:13: error: too many arguments to function 'TM_OneWire_Next'
   devices = TM_OneWire_Next(&OneWire);
             ^
In file included from ../src/main.c:22:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_onewire.h:156:16: note: declared here
 extern uint8_t TM_OneWire_Next(void);
                ^
../src/main.c:116:28: warning: passing argument 1 of 'TM_DS18B20_SetResolution' from incompatible pointer type [-Wincompatible-pointer-types]
   TM_DS18B20_SetResolution(&OneWire, &device[i][0], TM_DS18B20_Resolution_12bits);
                            ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:126:16: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'int *'
 extern uint8_t TM_DS18B20_SetResolution(uint8_t *ROM, TM_DS18B20_Resolution_t resolution);
                ^
../src/main.c:116:38: error: incompatible type for argument 2 of 'TM_DS18B20_SetResolution'
   TM_DS18B20_SetResolution(&OneWire, &device[i][0], TM_DS18B20_Resolution_12bits);
                                      ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:126:16: note: expected 'TM_DS18B20_Resolution_t {aka enum <anonymous>}' but argument is of type 'uint8_t * {aka unsigned char *}'
 extern uint8_t TM_DS18B20_SetResolution(uint8_t *ROM, TM_DS18B20_Resolution_t resolution);
                ^
../src/main.c:116:3: error: too many arguments to function 'TM_DS18B20_SetResolution'
   TM_DS18B20_SetResolution(&OneWire, &device[i][0], TM_DS18B20_Resolution_12bits);
   ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:126:16: note: declared here
 extern uint8_t TM_DS18B20_SetResolution(uint8_t *ROM, TM_DS18B20_Resolution_t resolution);
                ^
../src/main.c:120:2: error: too many arguments to function 'TM_DS18B20_StartAll'
  TM_DS18B20_StartAll(&OneWire);
  ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:90:13: note: declared here
 extern void TM_DS18B20_StartAll(void);
             ^
../src/main.c:125:7: error: too many arguments to function 'TM_DS18B20_AllDone'
   if (TM_DS18B20_AllDone(&OneWire)) {   
       ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:182:16: note: declared here
 extern uint8_t TM_DS18B20_AllDone(void);
                ^
../src/main.c:127:20: warning: passing argument 1 of 'TM_DS18B20_Read' from incompatible pointer type [-Wincompatible-pointer-types]
    TM_DS18B20_Read(&OneWire, device[0], &TEMP_WANT);
                    ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:101:16: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'int *'
 extern uint8_t TM_DS18B20_Read(uint8_t *ROM, float *destination);
                ^
../src/main.c:127:30: warning: passing argument 2 of 'TM_DS18B20_Read' from incompatible pointer type [-Wincompatible-pointer-types]
    TM_DS18B20_Read(&OneWire, device[0], &TEMP_WANT);
                              ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:101:16: note: expected 'float *' but argument is of type 'uint8_t * {aka unsigned char *}'
 extern uint8_t TM_DS18B20_Read(uint8_t *ROM, float *destination);
                ^
../src/main.c:127:4: error: too many arguments to function 'TM_DS18B20_Read'
    TM_DS18B20_Read(&OneWire, device[0], &TEMP_WANT);
    ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:101:16: note: declared here
 extern uint8_t TM_DS18B20_Read(uint8_t *ROM, float *destination);
                ^
../src/main.c:130:20: warning: passing argument 1 of 'TM_DS18B20_Read' from incompatible pointer type [-Wincompatible-pointer-types]
    TM_DS18B20_Read(&OneWire, device[1], &TEMP_CURRENT);
                    ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:101:16: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'int *'
 extern uint8_t TM_DS18B20_Read(uint8_t *ROM, float *destination);
                ^
../src/main.c:130:30: warning: passing argument 2 of 'TM_DS18B20_Read' from incompatible pointer type [-Wincompatible-pointer-types]
    TM_DS18B20_Read(&OneWire, device[1], &TEMP_CURRENT);
                              ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:101:16: note: expected 'float *' but argument is of type 'uint8_t * {aka unsigned char *}'
 extern uint8_t TM_DS18B20_Read(uint8_t *ROM, float *destination);
                ^
../src/main.c:130:4: error: too many arguments to function 'TM_DS18B20_Read'
    TM_DS18B20_Read(&OneWire, device[1], &TEMP_CURRENT);
    ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:101:16: note: declared here
 extern uint8_t TM_DS18B20_Read(uint8_t *ROM, float *destination);
                ^
../src/main.c:133:4: error: too many arguments to function 'TM_DS18B20_StartAll'
    TM_DS18B20_StartAll(&OneWire);
    ^
In file included from ../src/main.c:23:0:
/home/mainster/CODES_local/sw4stm32_workbench/00-STM32F429_LIBRARIES_MDB_MINIMAL/tm_stm32f4_ds18b20.h:90:13: note: declared here
 extern void TM_DS18B20_StartAll(void);
             ^
make: *** [src/main.o] Error 1

16:54:20 Build Finished (took 219ms)

